feat: add Cookies Consent component to marketplace web app (#43)
* feat: add Cookies Consent component to marketplace web app

- Implemented CookiesConsent component for managing user cookie preferences.
- Integrated CookiesConsent into the RootLayout of the marketplace web app.
- Updated ui index to export CookiesConsent.
- Added cookie consent logic to handle user preferences and local storage.

chore: update Dockerfiles for lms-service and marketplace-service

- Enhanced Dockerfiles to install SEB Root Certificates and configure NuGet for SEB Artifactory.
- Updated lms-service Dockerfile to ensure correct entry point and install necessary fonts.
- Modified marketplace-service Dockerfile to use SEB Artifactory for dependencies and added health check.

chore: refactor messaging-service Dockerfile

- Changed base image to use SEB Artifactory for Go and Debian.
- Improved build process with cache mounts for faster rebuilds.
- Added health check and switched to non-root user for better security.

* feat: update Dockerfiles to conditionally configure SEB Artifactory and download certificates

* fix: improve Dockerfile by refining Maven options and handling certificate file copying

* fix(ui): remove unsupported size prop from GdsDialog in CookiesConsent

* feat: enhance Dockerfile to conditionally handle SEB certificates and NuGet sources

* fix(ci): add build argument to disable SEB Artifactory usage

* fix(ci): add build argument to disable SEB Artifactory usage in CI/CD workflows

* fix(docker): enhance Dockerfile to conditionally set Maven options and Go proxy based on SEB environment

* fix(docker): update Dockerfile to correctly set VERSION_ID and improve Maven settings.xml creation

* fix(docker): update Dockerfile to copy certificates conditionally and handle absence gracefully

* feat(docker): add health checks for Zookeeper, Prometheus, and Grafana; update Kafka and Grafana dependencies to use service health

---------

Co-authored-by: shahidhussain004 <shahi

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -65,6 +65,11 @@ services:
     volumes:
       - zookeeper_data:/var/lib/zookeeper/data
       - zookeeper_logs:/var/lib/zookeeper/log
+    healthcheck:
+      test: ["CMD", "bash", "-c", "echo ruok | nc localhost 2181 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - marketplace-network
 
@@ -73,7 +78,7 @@ services:
     image: confluentinc/cp-kafka:7.4.0
     depends_on:
       zookeeper:
-        condition: service_started
+        condition: service_healthy
     ports:
       - "9092:9092"
       - "9101:9101"
@@ -121,6 +126,11 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     networks:
       - marketplace-network
 
@@ -135,7 +145,13 @@ services:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
-      - prometheus
+      prometheus:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     networks:
       - marketplace-network
 
@@ -176,13 +192,19 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/marketplace_db
-      SPRING_DATASOURCE_USERNAME: marketplace_user
-      SPRING_DATASOURCE_PASSWORD: marketplace_pass_dev
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
-      SPRING_DATA_MONGODB_URI: mongodb://mongo_user:mongo_pass_dev@mongodb:27017/lms_db?authSource=admin
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: marketplace_db
+      DB_USER: marketplace_user
+      DB_PASSWORD: marketplace_pass_dev
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      MONGO_USER: mongo_user
+      MONGO_PASSWORD: mongo_pass_dev
+      MONGO_HOST: mongodb
+      MONGO_PORT: 27017
+      MONGO_DB: lms_db
       JWT_SECRET: your-256-bit-secret-change-this-in-production-please-make-it-secure
     depends_on:
       postgres:
