--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -46,6 +46,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
