--- a/.gitignore
+++ b/.gitignore
@@ -192,8 +192,8 @@ Desktop.ini
 # VS Code
 .vscode/
 !.vscode/settings.json
+!.vscode/extensions.json
 .vscode/launch.json
-.vscode/extensions.json
 
 # Visual Studio
 .vs/
