--- a/.gitignore
+++ b/.gitignore
@@ -191,8 +191,9 @@ Desktop.ini
 
 # VS Code
 .vscode/
-launch.json
-extensions.json
+!.vscode/settings.json
+!.vscode/extensions.json
+.vscode/launch.json
 
 # Visual Studio
 .vs/
