--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -57,6 +57,11 @@ http {
         keepalive 32;
     }
 
+    upstream node_backend {
+        server content-service:8083;
+        keepalive 32;
+    }
+
     # ============================================================================
     # HTTP to HTTPS Redirect
     # ============================================================================
@@ -269,6 +274,118 @@ http {
         location /health {
             access_log off;
             proxy_pass http://go_backend;
+        }
+    }
+
+    # ============================================================================
+    # API ROUTES - NODE.JS SERVICE (Content - Blog/Articles)
+    # ============================================================================
+    server {
+        listen 80;
+        server_name content.localhost;
+
+        # Content API endpoints
+        location /api/content/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Request-ID $request_id;
+        }
+
+        # Categories endpoint
+        location /api/categories/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Tags endpoint
+        location /api/tags/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Comments endpoint
+        location /api/comments/ {
+            limit_req zone=api burst=30 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Search endpoint
+        location /api/search/ {
+            limit_req zone=api burst=20 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Media/uploads endpoint
+        location /api/media/ {
+            limit_req zone=general burst=10 nodelay;
+            client_max_body_size 20M;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Analytics endpoint
+        location /api/analytics/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Health check
+        location /health {
+            access_log off;
+            proxy_pass http://node_backend;
+        }
+
+        # Default route for content service
+        location / {
+            limit_req zone=general burst=20 nodelay;
+            proxy_pass http://node_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
