--- a/.github/workflows/content-service-ci-cd.yml
+++ b/.github/workflows/content-service-ci-cd.yml
@@ -2,7 +2,7 @@ name: Content Service CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, feature/contentServiceAdded]
     paths:
       - 'services/content-service/**'
       - '.github/workflows/content-service-ci-cd.yml'
