--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,7 @@ Desktop.ini
 # General
 *.sublime-project
 *.sublime-workspace
+*.code-workspace
 
 # ============================================================================
 # Build Artifacts & Caches
@@ -274,8 +275,3 @@ postman/*.environment.json
 secrets/
 private/
 .git-credentials
-
-# ============================================================================
-# SEB GREEN CORE PROJECT
-# ============================================================================
-sebgreen/
