fix: update .gitignore to track designer.code-workspace instead of all workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -206,7 +206,7 @@ Desktop.ini
 # General
 *.sublime-project
 *.sublime-workspace
-*.code-workspace
+designer.code-workspace
 
 # ============================================================================
 # Build Artifacts & Caches
