feat: Implement Portfolio, Review, and Time Entry Services
- Added PortfolioService for managing portfolio items, including CRUD operations and visibility controls.
- Introduced ReviewService for handling reviews, including creation, updates, and retrieval by user.
- Created TimeEntryService for tracking time entries related to contracts, including total hours calculation.
- Enhanced UserService with role-based user retrieval and improved error handling for unauthorized access.
- Updated application configuration to enable lazy loading and adjusted SQL dialect settings.
- Added comprehensive database migrations for portfolio items, contracts, time entries, and reviews.
- Implemented trigger functions for automatic updates of user statistics based on reviews and contract changes.
- Created test JSON files for contracts and portfolio items to facilitate testing.

--- a/services/marketplace-service/pom.xml
+++ b/services/marketplace-service/pom.xml
@@ -122,6 +122,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Jackson Hibernate Module for lazy loading support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate6</artifactId>
+        </dependency>
+
         <!-- AOP for logging and monitoring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
