--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,9 +32,9 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.1",
-    "@testing-library/dom": "^9.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^19.0.0",
