--- a/services/marketplace-service/src/main/resources/application.yml
+++ b/services/marketplace-service/src/main/resources/application.yml
@@ -23,7 +23,8 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         use_sql_comments: true
-    open-in-view: false
+        enable_lazy_load_no_trans: true
+    open-in-view: true
   
   flyway:
     enabled: true
