feat(tutorials): add tutorials module with CRUD operations and routes
- Implemented tutorials service with methods for fetching, creating, and updating tutorials, sections, and topics.
- Added tutorials routes for public and admin endpoints, including detailed schemas for validation.
- Enhanced app configuration to support CORS for additional origins.
- Registered tutorials routes in the main application.
- Updated logging in the LMS service for better debugging and error handling.
- Refactored course repository to use BsonDocument for more control over MongoDB queries.
- Added debug endpoint to fetch all courses without filters for easier troubleshooting.
- Updated MongoDB settings in development configuration.

--- a/services/lms-service/appsettings.Development.json
+++ b/services/lms-service/appsettings.Development.json
@@ -16,7 +16,7 @@
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://mongo_user:mongo_pass_dev@localhost:27017/?authSource=admin",
-    "DatabaseName": "lms_db_dev"
+    "DatabaseName": "lms_db"
   },
   "AwsSettings": {
     "AccessKeyId": "test",
