--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.49.2",
+    "react-markdown": "^9.1.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
